--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="main">
         <!-- header part -->
         <header>
-            <div class="dark">
+            <div class="wrap">
                 <article class="logo">
                     <a href=""><img src="./img/logo.png" alt="로고 이미지"></a>
                 </article>
